@@ -24,6 +24,7 @@ and ideas to make this software available.
 	Lars Oergel <lars.oergel@innominate.de>
 	Rakesh Patel <rpatel@globix.com>
 	Nathan Hawkins <Nathan.Hawkins@FMR.COM>
+	Andrew Rechenberg <ARechenberg@shermanfinancialgroup.com>
 	Greg Retowski <greg@rage.net>
 	Michael Shuey <shuey@ecn.purdue.edu>
 	Gero Treuner <gero@faveve.uni-stuttgart.de>
