@@ -11,6 +11,7 @@ AC_PROG_INSTALL
 
 AC_ARG_ENABLE(rfc2307bis, [  --enable-rfc2307bis       use RFC2307bis schema ], [AC_DEFINE(RFC2307BIS)])
 AC_ARG_ENABLE(ids-uid, [  --enable-ids-uid          permit RFC822 values for uid attribute ], [AC_DEFINE(IDS_UID)])
+AC_ARG_ENABLE(mssfu-schema, [  --enable-mssfu-schema     enable support for Active Directory users and groups ], AC_DEFINE(MSSFU_SCHEMA)])
 AC_ARG_ENABLE(no-so-keepalive, [  --enable-no-so-keepalive  disable SO_KEEPALIVE ], [AC_DEFINE(DISABLE_SO_KEEPALIVE)])
 AC_ARG_ENABLE(debugging, [  --enable-debugging        enable debug code ], [AC_DEFINE(DEBUG)])
 AC_ARG_ENABLE(authpassword, [  --enable-authpassword     enable checking of authPassword attribute ], [AC_DEFINE(AUTHPASSWORD)])
